# LabsUP

lab1up/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2up/: CMakeLists.txt  car.cpp  car.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab31up/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  tests.cpp
lab32up_tests/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  tests.cpp
